<resources>
    <string name="app_name">Prayer Times</string>
    <string name="prayerTimes">Prayer Times</string>
    <string name="calendar">Calendar</string>
    <string name="city">City</string>
    <string name="back">Return</string>
    <string name="search">Search</string>
    <string name="sethome">Set Home</string>
    <string name="city_country">CITY</string>
    <string name="enter_city">Enter City</string>
    <string name="pm">-,-PM</string>
    <string name="Fajr">Fajr</string>
    <string name="strack">-</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Dhuhr">Dhuhr</string>
    <string name="Asr">Asr</string>
    <string name="Maghrib">Maghrib</string>
    <string name="Isha">Isha</string>
    <string name="Allah">الله</string>
    <string name="nextPrayer">Next Prayer</string>
    <string name="errorMessage">The API call was unsuccessful. Control your input and try again.</string>
    <string name="citycountry">"CITY,COUNTRY"</string>
    <string name="updatedAtString">\t\tUpdated at \n%s</string>
    <string name="Hourglass">Hourglass</string>
    <string name="Halfnight">Half Night</string>
    <string name="savemonth">Save Month Times</string>
    <string name="set_the_date">Set the Date</string>
    <string name="date">Date</string>
</resources>