<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullToRefresh"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_best"
    tools:context=".CityActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:padding="14dp">

            <LinearLayout
                android:id="@+id/topContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/city"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/cityEdtText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="Enter a city name"
                    android:backgroundTint="@color/gold"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/enter_city"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp">

                </EditText>

                <TextView
                    android:id="@+id/cityPrayerTimesUpdatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/pm"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/cityDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/strack"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />


                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_button_transparent"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/search"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:backgroundTint="@color/gold" />

                <TextView
                    android:id="@+id/allah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Allah"
                    android:textColor="@color/gold"
                    android:textSize="85sp" />

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/cardview_dark_background"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />

        <ProgressBar
            android:id="@+id/loadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/errorMessage"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>