<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullToRefresh"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_best"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="640dp"
            android:orientation="vertical"
            android:padding="4dp">


            <LinearLayout
                android:id="@+id/topContainer"
                android:layout_width="407dp"
                android:layout_height="76dp"
                android:layout_marginTop="130dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/cityOutput"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/city"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />


                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/date"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/informationContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="210dp"
                android:orientation="vertical"
                android:padding="20dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Fajr"
                            android:src="@drawable/sujud"
                            android:tint="@color/gold"
                            tools:ignore="UseAppTint" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Fajr"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/fajr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/strack"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Sunrise"
                            android:src="@drawable/sunrise"
                            android:tint="@color/gold"
                            tools:ignore="UseAppTint" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Sunrise"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/strack"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="39dp"
                            android:contentDescription="@string/Dhuhr"
                            android:src="@drawable/praying"
                            android:tint="@color/gold"
                            tools:ignore="UseAppTint" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Dhuhr"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/dhuhr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/strack"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Asr"
                            android:src="@drawable/quran"
                            android:tint="@color/gold"
                            tools:ignore="UseAppTint" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Asr"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/asr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/strack"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>


                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Maghrib"
                            android:src="@drawable/qibla"
                            android:tint="@color/gold"
                            tools:ignore="UseAppTint" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Maghrib"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/maghrib"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/strack"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Isha"
                            android:src="@drawable/mosque"
                            android:tint="@color/gold"
                            tools:ignore="UseAppTint" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/Isha"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/isha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/strack"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nextPrayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/Hourglass"
                        android:src="@drawable/hourglass"
                        android:tint="@color/gold"
                        tools:ignore="UseAppTint" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:id="@+id/nextPrayerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/nextPrayer"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/nextPrayerValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/strack"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />


                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/Hourglass"
                        android:src="@drawable/halfnight"
                        android:tint="@color/gold"
                        tools:ignore="UseAppTint" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/Halfnight"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/halfnight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/strack"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="15dp" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/cardview_dark_background"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />

        <ProgressBar
            android:id="@+id/loadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/errorMessage"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>